<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PeopleSync</string>
    <string name="homepage_url" translatable="false">https://www.messageconcept.com/peoplesync/</string>
    <string name="twitter_handle" translatable="false">messageconcept</string>
    <string name="account_invalid">Account does not exist (anymore)</string>
    <string name="account_type" translatable="false">com.messageconcept.peoplesync</string>
    <string name="account_type_address_book" translatable="false">com.messageconcept.peoplesync.addressbook</string>
    <string name="account_title_address_book">PeopleSync Address book</string>
    <string name="address_books_authority" translatable="false">com.messageconcept.peoplesyncclient.addressbooks</string>
    <string name="address_books_authority_title">Address books</string>
    <string name="field_required">This field is required</string>
    <string name="help">Help</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="share">Share</string>
    <string name="database_destructive_migration_title">Database corrupted</string>
    <string name="database_destructive_migration_text">All accounts have been removed locally.</string>
    <string name="notification_channel_debugging">Debugging</string>
    <string name="notification_channel_general">Other important messages</string>
    <string name="notification_channel_status">Low-priority status messages</string>
    <string name="notification_channel_sync">Synchronization</string>
    <string name="notification_channel_sync_errors">Synchronization errors</string>
    <string name="notification_channel_sync_errors_desc">Important errors which stop synchronization like unexpected server replies</string>
    <string name="notification_channel_sync_warnings">Synchronization warnings</string>
    <string name="notification_channel_sync_warnings_desc">Non-fatal synchronization problems like certain invalid files</string>
    <string name="notification_channel_sync_io_errors">Network and I/O errors</string>
    <string name="notification_channel_sync_io_errors_desc">Timeouts, connection problems, etc. (often temporary)</string>
    <string name="intro_slogan1">PeopleSync</string>
    <string name="intro_slogan2">All contacts. Everywhere.</string>
    <string name="intro_battery_title">Regular sync intervals</string>
    <string name="intro_battery_not_whitelisted">Disabled (not recommended)</string>
    <string name="intro_battery_whitelisted">Enabled (recommended)</string>
    <string name="intro_battery_text">For synchronization at regular intervals, %s must be allowed to run in the background. Otherwise, Android may pause synchronization at any time.</string>
    <string name="intro_battery_dont_show">I don\'t need regular sync intervals.*</string>
    <string name="intro_autostart_title">%s compatibility</string>
    <string name="intro_autostart_text">This device probably blocks synchronization. If you\'re affected, you can only resolve this manually.</string>
    <string name="intro_autostart_dont_show">I have done the required settings. Don\'t remind me anymore.*</string>
    <string name="intro_leave_unchecked">* Leave unchecked to be reminded later. Can be reset in app settings / %s.</string>
    <string name="intro_more_info">More information</string>
    <string name="intro_tasks_title">Tasks support</string>
    <string name="intro_tasks_text1">If tasks are supported by your server, they can be synchronized with a supported tasks app:</string>
    <string name="intro_tasks_opentasks">OpenTasks</string>
    <string name="intro_tasks_opentasks_info"><![CDATA[For some features like subtasks or recurring tasks, you may need <a href="https://www.davx5.com/faq/tasks/advanced-task-features">additional apps</a>.]]></string>
    <string name="intro_tasks_tasks_org">Tasks</string>
    <string name="intro_tasks_tasks_org_info"><![CDATA[Some features <a href="https://www.davx5.com/faq/tasks/advanced-task-features">are not supported</a> (yet).]]></string>
    <string name="intro_tasks_no_app_store">No app store available</string>
    <string name="intro_tasks_dont_show">I don\'t need tasks support.*</string>
    <string name="intro_open_source_title">Open-source software</string>
    <string name="intro_open_source_text">We\'re happy that you use %s, which is open-source software. Development, maintenance and support are hard work. Please consider contributing (there are many ways) or a donation. It would be highly appreciated!</string>
    <string name="intro_open_source_details">How to contribute/donate</string>
    <string name="intro_open_source_dont_show">Don\'t show in the near future</string>
    <string name="permissions_title">Permissions</string>
    <string name="permissions_text">%s requires permissions to work properly.</string>
    <string name="permissions_all_title">All of the below</string>
    <string name="permissions_all_status_off">Use this to enable all features (recommended)</string>
    <string name="permissions_all_status_on">All permissions granted</string>
    <string name="permissions_contacts_title">Contacts permissions</string>
    <string name="permissions_contacts_status_off">No contact sync (not recommended)</string>
    <string name="permissions_contacts_status_on">Contact sync possible</string>
    <string name="permissions_calendar_title">Calendar permissions</string>
    <string name="permissions_calendar_status_off">No calendar sync (not recommended)</string>
    <string name="permissions_calendar_status_on">Calendar sync possible</string>
    <string name="permissions_opentasks_title">OpenTasks permissions</string>
    <string name="permissions_tasksorg_title">Tasks permissions</string>
    <string name="permissions_tasks_status_not_installed">No task sync (not installed)</string>
    <string name="permissions_tasks_status_off">No task sync (not recommended)</string>
    <string name="permissions_tasks_status_on">Task sync possible</string>
    <string name="permissions_autoreset_title">Keep permissions</string>
    <string name="permissions_autoreset_status_off">Permissions may be reset automatically (not recommended)</string>
    <string name="permissions_autoreset_status_on">Permissions won\'t be reset automatically</string>
    <string name="permissions_autoreset_instruction">Click Permissions > uncheck \"Remove permissions if app isn\'t used\"</string>
    <string name="permissions_app_settings_hint">If a switch doesn\'t work, use app settings / Permissions.</string>
    <string name="permissions_app_settings">App settings</string>
    <string name="wifi_permissions_label">WiFi SSID permissions</string>
    <string name="wifi_permissions_intro">To be able to access the current WiFi name (SSID), these conditions must be met:</string>
    <string name="wifi_permissions_location_permission">Precise location permission</string>
    <string name="wifi_permissions_location_permission_on">Location permission granted</string>
    <string name="wifi_permissions_location_permission_off">Location permission denied</string>
    <string name="wifi_permissions_background_location_permission">Background location permission</string>
    <string name="wifi_permissions_background_location_permission_label">Allow all the time</string>
    <string name="wifi_permissions_background_location_permission_on"><![CDATA[Location permission set to <b>%s</b>]]></string>
    <string name="wifi_permissions_background_location_permission_off"><![CDATA[Location permission not set to <b>%s</b>]]></string>
    <string name="wifi_permissions_background_location_disclaimer">%s uses the Location permission only to determine the current WiFi\'s SSID for SSID-restricted accounts. This will happen even when the app is in background. No location data are collected, stored, processed or sent anywhere.</string>
    <string name="wifi_permissions_location_enabled">Location always enabled</string>
    <string name="wifi_permissions_location_enabled_on">Location service is enabled</string>
    <string name="wifi_permissions_location_enabled_off">Location service is disabled</string>
    <string name="about_translations">Translations</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_version">Version %1$s (%2$d)</string>
    <string name="about_build_date">Compiled on %s</string>
    <string name="about_copyright" translatable="false">© messageconcept software GmbH</string>
    <string name="about_flavor_info">This version is only eligible for distribution over Google Play.</string>
    <string name="about_license_info_no_warranty">This program comes with ABSOLUTELY NO WARRANTY. It is free software, and you are welcome to redistribute it under certain conditions.</string>
    <string name="about_translations_thanks"><![CDATA[<i>Thanks to: </i> %s]]></string>
    <string name="about_contact_info">messageconcept software GmbH\nGrosse Witschgasse 17\n50676 Cologne, Germany\nPhone +49 221 677855 88\n(no app support)</string>
    <string name="logging_couldnt_create_file">Couldn\'t create log file</string>
    <string name="logging_notification_text">Now logging all %s activities</string>
    <string name="logging_notification_view_share">View/share</string>
    <string name="logging_notification_disable">Disable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="app_settings_debug">Debugging</string>
    <string name="app_settings_show_debug_info">Show debug info</string>
    <string name="app_settings_show_debug_info_details">View/share software and configuration details</string>
    <string name="app_settings_logging">Verbose logging</string>
    <string name="app_settings_logging_on">Logging is active</string>
    <string name="app_settings_logging_off">Logging is disabled</string>
    <string name="app_settings_foreground_service">Keep in foreground</string>
    <string name="app_settings_foreground_service_details">May help if your device prevents automatic synchronization</string>
    <string name="app_settings_connection">Connection</string>
    <string name="app_settings_override_proxy">Override proxy settings</string>
    <string name="app_settings_override_proxy_on">Use custom proxy settings</string>
    <string name="app_settings_override_proxy_off">Use system default proxy settings</string>
    <string name="app_settings_override_proxy_host">HTTP proxy host name</string>
    <string name="app_settings_override_proxy_port">HTTP proxy port</string>
    <string name="app_settings_security">Security</string>
    <string name="app_settings_security_app_permissions">App permissions</string>
    <string name="app_settings_security_app_permissions_summary">Review permissions required for synchronization</string>
    <string name="app_settings_distrust_system_certs">Distrust system certificates</string>
    <string name="app_settings_distrust_system_certs_on">System and user-added CAs won\'t be trusted</string>
    <string name="app_settings_distrust_system_certs_off">System and user-added CAs will be trusted (recommended)</string>
    <string name="app_settings_reset_certificates">Reset (un)trusted certificates</string>
    <string name="app_settings_reset_certificates_summary">Resets trust of all custom certificates</string>
    <string name="app_settings_user_interface">User interface</string>
    <string name="app_settings_notification_settings">Notification settings</string>
    <string name="app_settings_notification_settings_summary">Manage notification channels and their settings</string>
    <string name="app_settings_theme_title">Select theme</string>
    <string name="app_settings_theme_summary">Current theme: %s</string>
    <string name="app_settings_reset_hints">Reset hints</string>
    <string name="app_settings_reset_hints_summary">Re-enables hints which have been dismissed previously</string>
</resources>