<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/app_settings_debug">

        <Preference
            android:title="@string/app_settings_show_debug_info"
            android:summary="@string/app_settings_show_debug_info_details"
            android:icon="@drawable/ic_bug_report">
            <intent
                android:targetPackage="com.messageconcept.peoplesyncclient"
                android:targetClass="com.messageconcept.peoplesyncclient.ui.DebugInfoActivity"/>
        </Preference>

        <SwitchPreferenceCompat
            android:key="log_to_file"
            android:title="@string/app_settings_logging"
            android:icon="@drawable/ic_adb"
            android:summaryOn="@string/app_settings_logging_on"
            android:summaryOff="@string/app_settings_logging_off"/>

        <SwitchPreferenceCompat
            android:key="foreground_service"
            android:title="@string/app_settings_foreground_service"
            android:summary="@string/app_settings_foreground_service_details"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/app_settings_connection">

        <SwitchPreferenceCompat
            android:key="override_proxy"
            android:title="@string/app_settings_override_proxy"
            android:summaryOn="@string/app_settings_override_proxy_on"
            android:summaryOff="@string/app_settings_override_proxy_off"/>

        <EditTextPreference
            android:key="override_proxy_host"
            android:dependency="override_proxy"
            android:title="@string/app_settings_override_proxy_host"
            android:inputType="textUri"/>

        <com.messageconcept.peoplesyncclient.ui.widget.IntEditTextPreference
            android:key="override_proxy_port"
            android:dependency="override_proxy"
            android:title="@string/app_settings_override_proxy_port"
            android:inputType="number"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/app_settings_security">

        <SwitchPreferenceCompat
            android:key="distrust_system_certs"
            android:title="@string/app_settings_distrust_system_certs"
            android:summaryOn="@string/app_settings_distrust_system_certs_on"
            android:summaryOff="@string/app_settings_distrust_system_certs_off"/>

        <Preference
            android:key="reset_certificates"
            android:title="@string/app_settings_reset_certificates"
            android:summary="@string/app_settings_reset_certificates_summary"/>

        <Preference
            android:title="@string/app_settings_security_app_permissions"
            android:summary="@string/app_settings_security_app_permissions_summary">
            <intent
                android:targetPackage="com.messageconcept.peoplesyncclient"
                android:targetClass="com.messageconcept.peoplesyncclient.ui.PermissionsActivity"/>
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/app_settings_user_interface">

        <Preference
            android:key="notification_settings"
            android:icon="@drawable/ic_notifications"
            android:title="@string/app_settings_notification_settings"
            android:summary="@string/app_settings_notification_settings_summary"/>

        <ListPreference
            android:key="preferred_theme"
            android:icon="@drawable/ic_invert_colors"
            android:title="@string/app_settings_theme_title"
            android:summary="@string/app_settings_theme_summary"
            android:entries="@array/app_settings_theme_names"
            android:entryValues="@array/app_settings_theme_values"
            android:persistent="false" />

        <Preference
            android:key="reset_hints"
            android:title="@string/app_settings_reset_hints"
            android:summary="@string/app_settings_reset_hints_summary"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
